--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -20,7 +20,7 @@ body {
   top: 0;
   bottom: 0;
   right: -100%;
-  background-color: white;
+  background-color: #EEEEEE;
 }
 
 .form-open {
@@ -78,7 +78,8 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  height: 40px;
+  height: 30px;
+  padding: 5px;
   img {
     height: 30px;
     width: 30px;
@@ -96,36 +97,61 @@ body {
   width: calc(100% - 20px);
   background-color: #dcdcdc;
   color: #90a489;
-  text-transform: uppercase;
-  font-weight: bold;
+  font-family: "Roboto-Bold", 'sans-serif';
   display: inherit;
   padding: 10px;
+  font-size: 7vw;
+
+  @media (min-width: 600px) {
+    font-size: 4vw;
+  }
+
 }
 
 .productos-insite-categoria-titulo,
 .productos-insite-producto-guar-titulo{
   width: calc(100% - 20px);
   background-color: #dcdcdc;
-  color: #90a489;
-  text-transform: uppercase;
-  font-weight: bold;
   display: inherit;
   padding: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 7vw;
+  color: #76986A;
+  @media (min-width: 600px) {
+    font-size: 4vw;
+  }
+
 }
+
 
 .productos-insite-categoria-imagen {
   width: 100%;
-  height: 50px;
+  svg{
+    display: flex;
+    width: 100%!important;
+    height: 100%;
+  }
+}
+
+.productos-list h1{
+  Padding: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 22px;
 }
 
 .buscador-container {
+  background-color: black;
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  .input {
-    width: 90%;
+  .input{
+    display: flex;
+    width: 99%;
     margin: 5px;
+    font-size: 18px;
+    color: black;
+    font-family: "Roboto-Bold", 'sans-serif';
   }
 }
 
@@ -151,11 +177,20 @@ body {
   flex-direction: column;
 }
 
+.productos-insite-producto{
+  font-family: "Roboto", 'sans-serif';
+  font-size: 16px;
+  padding: 5px;
+}
+
 .productos-insite-producto-top{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 24px;
+  color: #000000;
 }
 .productos-insite-producto-titulo{
   font-weight: bold;
@@ -169,11 +204,141 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background: #D8D8D8;
+  font-size: 24px;
+  font-family: "Roboto", 'sans-serif';
   button{
-
+    border-style: none;
+    background: none;
   }
+
 }
 
 .productos-insite-producto-comentario{
-  width: 100%;
+  display: flex;
+  margin: 5px auto;
+  width: 97%;
+  background: #D8D8D8;
+  border: 1px solid #979797;
+  box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
+  border-radius: 8px;
+
 }
+
+.productos-insite-producto-description{
+  padding: 10px;
+  font-family: "Roboto", 'sans-serif';
+  font-size: 16px;
+}
+
+.botonera{
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.boton-agregar, .boton-cancelar, .boton-ok, .boton-eliminar, .boton-calendario {
+  position: relative;
+  height: 37px;
+  width: 37px;
+  flex: 0 0 37px;
+  display: inline-block;
+  padding: 0;
+  border: 0;
+  border-radius: 100%;
+  overflow: hidden;
+  font-size: 16px;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.btn-agregar, .btn-cancelar, .btn-ok, .btn-eliminar, .btn-calendario {
+  position: relative;
+  color:#fff;
+  font-size: 14px;
+  height: 37px;
+  width: 100px;
+  flex: 0 0 37px;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.boton-cancelar, .btn-cancelar{
+  background-color:#ED7161!important;
+}
+.boton-agregar, .btn-agregar{
+  background-color: #293333;
+}
+.boton-ok, .btn-ok{
+  background-color: #00CE5D;
+}
+.boton-eliminar, .btn-eliminar{
+  background-color: sandybrown;
+}
+.boton-calendario, .btn-calendario{
+  background-color: #447EAF;
+}
+
+.fa{
+  color: white;
+}
+
+.boton-agregar:hover, .boton-cancelar:hover, .boton-ok:hover, .boton-eliminar:hover, .boton-calendario:hover,
+.btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover{
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  cursor: pointer!important;
+  background-color: #79996D!important;
+  -ms-transform: scale(1.2, 1.2); /* IE 9 */
+  -webkit-transform: scale(1.2, 1.2); /* Safari */
+  transform: scale(1.2, 1.2);
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover{
+  -ms-transform: scale(1, 1); /* IE 9 */
+  -webkit-transform: scale(1, 1); /* Safari */
+  transform: scale(1, 1);
+}
+
+.input input{
+  width: 100%;
+  font-size: 18px!important;
+  color: black!important;
+  height: 30px;
+  border-style: none;
+  -webkit-border-radius: 5px;
+  padding: 5px;
+
+}
+
+.total-mi-pedido{
+  margin: 4px auto;
+  font-size: 28px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  padding-right: 10px;
+
+}
+
+.contenedor-mesero-plugin{
+  mv-productos-insite{
+    flex: 3;
+  }
+}
+ .contenedor-mesero-plugin{
+   @media (max-width: 600px) {
+     mv-mi-pedido{
+       display: none;
+       visibility: hidden;
+     }
+   }
+ }
