--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Roboto";
-/* line 5, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,45 +21,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../RailsInstaller/Ruby2.2.0/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../Users/diegob/.rvm/gems/ruby-head/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -76,7 +76,7 @@ body {
   top: 0;
   bottom: 0;
   right: -100%;
-  background-color: white;
+  background-color: #EEEEEE;
 }
 
 /* line 26, ../sass/styles.scss */
@@ -142,121 +142,315 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  height: 40px;
+  height: 30px;
+  padding: 5px;
 }
-/* line 82, ../sass/styles.scss */
+/* line 83, ../sass/styles.scss */
 .nav img {
   height: 30px;
   width: 30px;
 }
-/* line 86, ../sass/styles.scss */
+/* line 87, ../sass/styles.scss */
 .nav .separator {
   flex: 8;
 }
 
-/* line 91, ../sass/styles.scss */
+/* line 92, ../sass/styles.scss */
 .view-container {
   margin-top: 40px;
 }
 
-/* line 95, ../sass/styles.scss */
+/* line 96, ../sass/styles.scss */
 .mi-pedido-titulo {
   width: calc(100% - 20px);
   background-color: #dcdcdc;
   color: #90a489;
-  text-transform: uppercase;
-  font-weight: bold;
+  font-family: "Roboto-Bold", 'sans-serif';
   display: inherit;
   padding: 10px;
+  font-size: 7vw;
+}
+@media (min-width: 600px) {
+  /* line 96, ../sass/styles.scss */
+  .mi-pedido-titulo {
+    font-size: 4vw;
+  }
 }
 
-/* line 105, ../sass/styles.scss */
+/* line 111, ../sass/styles.scss */
 .productos-insite-categoria-titulo,
 .productos-insite-producto-guar-titulo {
   width: calc(100% - 20px);
   background-color: #dcdcdc;
-  color: #90a489;
-  text-transform: uppercase;
-  font-weight: bold;
   display: inherit;
   padding: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 7vw;
+  color: #76986A;
+}
+@media (min-width: 600px) {
+  /* line 111, ../sass/styles.scss */
+  .productos-insite-categoria-titulo,
+  .productos-insite-producto-guar-titulo {
+    font-size: 4vw;
+  }
 }
 
-/* line 116, ../sass/styles.scss */
+/* line 127, ../sass/styles.scss */
 .productos-insite-categoria-imagen {
   width: 100%;
-  height: 50px;
+}
+/* line 129, ../sass/styles.scss */
+.productos-insite-categoria-imagen svg {
+  display: flex;
+  width: 100% !important;
+  height: 100%;
 }
 
-/* line 121, ../sass/styles.scss */
+/* line 136, ../sass/styles.scss */
+.productos-list h1 {
+  Padding: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 22px;
+}
+
+/* line 142, ../sass/styles.scss */
 .buscador-container {
+  background-color: black;
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
 }
-/* line 126, ../sass/styles.scss */
+/* line 148, ../sass/styles.scss */
 .buscador-container .input {
-  width: 90%;
+  display: flex;
+  width: 99%;
   margin: 5px;
+  font-size: 18px;
+  color: black;
+  font-family: "Roboto-Bold", 'sans-serif';
 }
 
-/* line 132, ../sass/styles.scss */
+/* line 158, ../sass/styles.scss */
 .productos-insite-producto,
 .productos-insite-producto-guarnicion {
   display: flex;
   flex-direction: row;
 }
-/* line 136, ../sass/styles.scss */
+/* line 162, ../sass/styles.scss */
 .productos-insite-producto span:nth-child(1),
 .productos-insite-producto-guarnicion span:nth-child(1) {
   flex: 8;
 }
-/* line 139, ../sass/styles.scss */
+/* line 165, ../sass/styles.scss */
 .productos-insite-producto span,
 .productos-insite-producto-guarnicion span {
   padding: 5px;
 }
 
-/* line 144, ../sass/styles.scss */
+/* line 170, ../sass/styles.scss */
 .productos-insite-producto:nth-child(odd),
 .productos-insite-producto-guarnicion:nth-child(odd) {
   background-color: #DfDfDf;
 }
 
-/* line 149, ../sass/styles.scss */
+/* line 175, ../sass/styles.scss */
 .productos-insite-detalle {
   display: flex;
   flex-direction: column;
 }
 
-/* line 154, ../sass/styles.scss */
+/* line 180, ../sass/styles.scss */
+.productos-insite-producto {
+  font-family: "Roboto", 'sans-serif';
+  font-size: 16px;
+  padding: 5px;
+}
+
+/* line 186, ../sass/styles.scss */
 .productos-insite-producto-top {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 10px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  font-size: 24px;
+  color: #000000;
 }
 
-/* line 160, ../sass/styles.scss */
+/* line 195, ../sass/styles.scss */
 .productos-insite-producto-titulo {
   font-weight: bold;
 }
 
-/* line 163, ../sass/styles.scss */
+/* line 198, ../sass/styles.scss */
 .productos-insite-producto-precio {
   font-weight: bold;
   color: #90a489;
 }
 
-/* line 168, ../sass/styles.scss */
+/* line 203, ../sass/styles.scss */
 .productos-insite-producto-add-remove {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background: #D8D8D8;
+  font-size: 24px;
+  font-family: "Roboto", 'sans-serif';
+}
+/* line 210, ../sass/styles.scss */
+.productos-insite-producto-add-remove button {
+  border-style: none;
+  background: none;
 }
 
-/* line 177, ../sass/styles.scss */
+/* line 217, ../sass/styles.scss */
 .productos-insite-producto-comentario {
+  display: flex;
+  margin: 5px auto;
+  width: 97%;
+  background: #D8D8D8;
+  border: 1px solid #979797;
+  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
+/* line 228, ../sass/styles.scss */
+.productos-insite-producto-description {
+  padding: 10px;
+  font-family: "Roboto", 'sans-serif';
+  font-size: 16px;
+}
+
+/* line 234, ../sass/styles.scss */
+.botonera {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* line 240, ../sass/styles.scss */
+.boton-agregar, .boton-cancelar, .boton-ok, .boton-eliminar, .boton-calendario {
+  position: relative;
+  height: 37px;
+  width: 37px;
+  flex: 0 0 37px;
+  display: inline-block;
+  padding: 0;
+  border: 0;
+  border-radius: 100%;
+  overflow: hidden;
+  font-size: 16px;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+/* line 256, ../sass/styles.scss */
+.btn-agregar, .btn-cancelar, .btn-ok, .btn-eliminar, .btn-calendario {
+  position: relative;
+  color: #fff;
+  font-size: 14px;
+  height: 37px;
+  width: 100px;
+  flex: 0 0 37px;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+/* line 274, ../sass/styles.scss */
+.boton-cancelar, .btn-cancelar {
+  background-color: #ED7161 !important;
+}
+
+/* line 277, ../sass/styles.scss */
+.boton-agregar, .btn-agregar {
+  background-color: #293333;
+}
+
+/* line 280, ../sass/styles.scss */
+.boton-ok, .btn-ok {
+  background-color: #00CE5D;
+}
+
+/* line 283, ../sass/styles.scss */
+.boton-eliminar, .btn-eliminar {
+  background-color: sandybrown;
+}
+
+/* line 286, ../sass/styles.scss */
+.boton-calendario, .btn-calendario {
+  background-color: #447EAF;
+}
+
+/* line 290, ../sass/styles.scss */
+.fa {
+  color: white;
+}
+
+/* line 294, ../sass/styles.scss */
+.boton-agregar:hover, .boton-cancelar:hover, .boton-ok:hover, .boton-eliminar:hover, .boton-calendario:hover,
+.btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  cursor: pointer !important;
+  background-color: #79996D !important;
+  -ms-transform: scale(1.2, 1.2);
+  /* IE 9 */
+  -webkit-transform: scale(1.2, 1.2);
+  /* Safari */
+  transform: scale(1.2, 1.2);
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+/* line 307, ../sass/styles.scss */
+.btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
+  -ms-transform: scale(1, 1);
+  /* IE 9 */
+  -webkit-transform: scale(1, 1);
+  /* Safari */
+  transform: scale(1, 1);
+}
+
+/* line 313, ../sass/styles.scss */
+.input input {
   width: 100%;
+  font-size: 18px !important;
+  color: black !important;
+  height: 30px;
+  border-style: none;
+  -webkit-border-radius: 5px;
+  padding: 5px;
+}
+
+/* line 324, ../sass/styles.scss */
+.total-mi-pedido {
+  margin: 4px auto;
+  font-size: 28px;
+  font-family: "Roboto-Bold", 'sans-serif';
+  padding-right: 10px;
+}
+
+/* line 333, ../sass/styles.scss */
+.contenedor-mesero-plugin mv-productos-insite {
+  flex: 3;
+}
+
+@media (max-width: 600px) {
+  /* line 339, ../sass/styles.scss */
+  .contenedor-mesero-plugin mv-mi-pedido {
+    display: none;
+    visibility: hidden;
+  }
 }
