--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -44,10 +44,10 @@ body {
 }
 
 .mi-pedido-extra {
-  border: 1px solid #8c8c8c;
   background-color: #D5D5D5;
   display: flex;
   flex-direction: row;
+  padding: 10px;
 }
 
 .mi-pedido-eliminar {
