--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -104,10 +104,10 @@ body {
 
 /* line 46, ../sass/styles.scss */
 .mi-pedido-extra {
-  border: 1px solid #8c8c8c;
   background-color: #D5D5D5;
   display: flex;
   flex-direction: row;
+  padding: 10px;
 }
 
 /* line 53, ../sass/styles.scss */
@@ -237,38 +237,54 @@ body {
 .productos-insite-producto-guarnicion {
   display: flex;
   flex-direction: row;
+  background: #FFFFFF;
+  font-size: 17px;
+  padding: 8px;
 }
-/* line 162, ../sass/styles.scss */
+/* line 166, ../sass/styles.scss */
 .productos-insite-producto span:nth-child(1),
 .productos-insite-producto-guarnicion span:nth-child(1) {
   flex: 8;
 }
-/* line 165, ../sass/styles.scss */
+/* line 169, ../sass/styles.scss */
 .productos-insite-producto span,
 .productos-insite-producto-guarnicion span {
   padding: 5px;
 }
 
-/* line 170, ../sass/styles.scss */
+@media (min-width: 600px) {
+  /* line 176, ../sass/styles.scss */
+  .productos-insite-producto:hover, .productos-insite-producto-guarnicion:hover {
+    cursor: pointer;
+    background-color: #76986A !important;
+    color: white;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+  }
+}
+
+/* line 188, ../sass/styles.scss */
 .productos-insite-producto:nth-child(odd),
 .productos-insite-producto-guarnicion:nth-child(odd) {
   background-color: #DfDfDf;
 }
 
-/* line 175, ../sass/styles.scss */
+/* line 193, ../sass/styles.scss */
 .productos-insite-detalle {
   display: flex;
   flex-direction: column;
 }
 
-/* line 180, ../sass/styles.scss */
+/* line 198, ../sass/styles.scss */
 .productos-insite-producto {
   font-family: "Roboto", 'sans-serif';
   font-size: 16px;
   padding: 5px;
 }
 
-/* line 186, ../sass/styles.scss */
+/* line 204, ../sass/styles.scss */
 .productos-insite-producto-top {
   display: flex;
   flex-direction: row;
@@ -279,18 +295,18 @@ body {
   color: #000000;
 }
 
-/* line 195, ../sass/styles.scss */
+/* line 213, ../sass/styles.scss */
 .productos-insite-producto-titulo {
   font-weight: bold;
 }
 
-/* line 198, ../sass/styles.scss */
+/* line 216, ../sass/styles.scss */
 .productos-insite-producto-precio {
   font-weight: bold;
   color: #90a489;
 }
 
-/* line 203, ../sass/styles.scss */
+/* line 221, ../sass/styles.scss */
 .productos-insite-producto-add-remove {
   display: flex;
   flex-direction: row;
@@ -299,13 +315,13 @@ body {
   font-size: 24px;
   font-family: "Roboto", 'sans-serif';
 }
-/* line 210, ../sass/styles.scss */
+/* line 228, ../sass/styles.scss */
 .productos-insite-producto-add-remove button {
   border-style: none;
   background: none;
 }
 
-/* line 217, ../sass/styles.scss */
+/* line 235, ../sass/styles.scss */
 .productos-insite-producto-comentario {
   display: flex;
   margin: 5px auto;
@@ -316,21 +332,21 @@ body {
   border-radius: 8px;
 }
 
-/* line 228, ../sass/styles.scss */
+/* line 246, ../sass/styles.scss */
 .productos-insite-producto-description {
   padding: 10px;
   font-family: "Roboto", 'sans-serif';
   font-size: 16px;
 }
 
-/* line 234, ../sass/styles.scss */
+/* line 252, ../sass/styles.scss */
 .botonera {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-/* line 240, ../sass/styles.scss */
+/* line 258, ../sass/styles.scss */
 .boton-agregar, .boton-cancelar, .boton-ok, .boton-eliminar, .boton-calendario {
   position: relative;
   height: 37px;
@@ -348,7 +364,7 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 256, ../sass/styles.scss */
+/* line 274, ../sass/styles.scss */
 .btn-agregar, .btn-cancelar, .btn-ok, .btn-eliminar, .btn-calendario {
   position: relative;
   color: #fff;
@@ -367,37 +383,37 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 274, ../sass/styles.scss */
+/* line 292, ../sass/styles.scss */
 .boton-cancelar, .btn-cancelar {
   background-color: #ED7161 !important;
 }
 
-/* line 277, ../sass/styles.scss */
+/* line 295, ../sass/styles.scss */
 .boton-agregar, .btn-agregar {
   background-color: #293333;
 }
 
-/* line 280, ../sass/styles.scss */
+/* line 298, ../sass/styles.scss */
 .boton-ok, .btn-ok {
   background-color: #00CE5D;
 }
 
-/* line 283, ../sass/styles.scss */
+/* line 301, ../sass/styles.scss */
 .boton-eliminar, .btn-eliminar {
   background-color: sandybrown;
 }
 
-/* line 286, ../sass/styles.scss */
+/* line 304, ../sass/styles.scss */
 .boton-calendario, .btn-calendario {
   background-color: #447EAF;
 }
 
-/* line 290, ../sass/styles.scss */
+/* line 308, ../sass/styles.scss */
 .fa {
   color: white;
 }
 
-/* line 294, ../sass/styles.scss */
+/* line 312, ../sass/styles.scss */
 .boton-agregar:hover, .boton-cancelar:hover, .boton-ok:hover, .boton-eliminar:hover, .boton-calendario:hover,
 .btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -414,7 +430,7 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 307, ../sass/styles.scss */
+/* line 325, ../sass/styles.scss */
 .btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
   -ms-transform: scale(1, 1);
   /* IE 9 */
@@ -423,18 +439,17 @@ body {
   transform: scale(1, 1);
 }
 
-/* line 313, ../sass/styles.scss */
+/* line 331, ../sass/styles.scss */
 .input input {
   width: 100%;
   font-size: 18px !important;
   color: black !important;
   height: 30px;
   border-style: none;
-  -webkit-border-radius: 5px;
   padding: 5px;
 }
 
-/* line 324, ../sass/styles.scss */
+/* line 341, ../sass/styles.scss */
 .total-mi-pedido {
   margin: 4px auto;
   font-size: 28px;
@@ -442,13 +457,28 @@ body {
   padding-right: 10px;
 }
 
-/* line 333, ../sass/styles.scss */
+/* line 351, ../sass/styles.scss */
+.plato-sin-confirmar {
+  border-top: 5px solid darkred !important;
+}
+
+/* line 353, ../sass/styles.scss */
+.plato-confirmado {
+  border-top: 5px solid yellow !important;
+}
+
+/* line 356, ../sass/styles.scss */
+.plato-servido {
+  border-top: 5px #79996D solid !important;
+}
+
+/* line 361, ../sass/styles.scss */
 .contenedor-mesero-plugin mv-productos-insite {
   flex: 3;
 }
 
 @media (max-width: 600px) {
-  /* line 339, ../sass/styles.scss */
+  /* line 367, ../sass/styles.scss */
   .contenedor-mesero-plugin mv-mi-pedido {
     display: none;
     visibility: hidden;
