--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -5,14 +5,22 @@ $clr_control_primary: #00CE5D;
 $color2: #77b300;
 $color3: #446600;
 
+//Nueva paleta
+//$color-principal: #E91E6;
+$color-principal: #00ACC1;
+$color-hover-tabla: #84FFFF;
+$color-secundario: #263238;
+$color-action: #8aacc8;
+$color-focus: #eeffff;
+$color-complementario: #546E7A;
+
 //@import "bourbon";
 @import "compass";
 @import "compass/reset";
-@import 'https://fonts.googleapis.com/css?family=Roboto';
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,700');
 
 body {
-  font-family: "Roboto";
-}
+font-family: 'Ubuntu', sans-serif}
 
 .form-abm {
   position: fixed;
@@ -59,7 +67,7 @@ body {
 
 .mi-pedido-top-left,
 .mi-pedido-extra-left {
-  flex: 8;
+  flex: 3;
   margin: 5px;
 }
 
@@ -73,8 +81,9 @@ body {
   display: flex;
   flex-direction: row;
   align-content: space-between;
-  background-color: #eeeeee;
+  background-color: $color-secundario;
   position: fixed;
+  color: white;
   top: 0;
   left: 0;
   right: 0;
@@ -95,9 +104,9 @@ body {
 
 .mi-pedido-titulo {
   width: calc(100% - 20px);
-  background-color: #dcdcdc;
-  color: #90a489;
-  font-family: "Roboto-Bold", 'sans-serif';
+  background-color: $color-principal;
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
   display: inherit;
   padding: 10px;
   font-size: 7vw;
@@ -111,12 +120,12 @@ body {
 .productos-insite-categoria-titulo,
 .productos-insite-producto-guar-titulo{
   width: calc(100% - 20px);
-  background-color: #dcdcdc;
+  background-color: $color-principal;
   display: inherit;
   padding: 10px;
-  font-family: "Roboto-Bold", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
   font-size: 7vw;
-  color: #76986A;
+  color: white;
   @media (min-width: 600px) {
     font-size: 4vw;
   }
@@ -125,7 +134,16 @@ body {
 
 
 .productos-insite-categoria-imagen {
-  width: 100%;
+  padding: 10px;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1b2b4+0,a1b2b4+100&1+0,0.3+100 */
+  background: -moz-linear-gradient(top,  rgba(161,178,180,1) 0%, rgba(161,178,180,0.3) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(161,178,180,1) 0%,rgba(161,178,180,0.3) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(161,178,180,1) 0%,rgba(161,178,180,0.3) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1b2b4', endColorstr='#4da1b2b4',GradientType=0 ); /* IE6-9 */
+
+
+
+
   svg{
     display: flex;
     width: 100%!important;
@@ -135,12 +153,11 @@ body {
 
 .productos-list h1{
   Padding: 10px;
-  font-family: "Roboto-Bold", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
   font-size: 22px;
 }
 
 .buscador-container {
-  background-color: black;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -151,7 +168,7 @@ body {
     margin: 5px;
     font-size: 18px;
     color: black;
-    font-family: "Roboto-Bold", 'sans-serif';
+    font-family: 'Ubuntu', sans-serif;
   }
 }
 
@@ -185,20 +202,19 @@ body {
   }
 }
 
-.productos-insite-producto:nth-child(odd),
-.productos-insite-producto-guarnicion:nth-child(odd) {
-  background-color: #DfDfDf;
-}
+
 
 .productos-insite-detalle{
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
 }
 
 .productos-insite-producto{
-  font-family: "Roboto", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
   padding: 5px;
+  background-color: #EDEDED;
 }
 
 .productos-insite-producto-top{
@@ -206,7 +222,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   margin: 10px;
-  font-family: "Roboto-Bold", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
   font-size: 24px;
   color: #000000;
 }
@@ -215,19 +231,22 @@ body {
 }
 .productos-insite-producto-precio{
   font-weight: bold;
-  color: #90a489;
+  color: black;
 }
 
 .productos-insite-producto-add-remove{
   display: flex;
   flex-direction: row;
+  color: white;
   justify-content: space-between;
-  background: #D8D8D8;
+  background: $color-secundario;
   font-size: 24px;
-  font-family: "Roboto", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
+  align-items: center;
   button{
     border-style: none;
     background: none;
+    padding-top: 5px;
   }
 
 }
@@ -244,9 +263,11 @@ body {
 }
 
 .productos-insite-producto-description{
-  padding: 10px;
-  font-family: "Roboto", 'sans-serif';
-  font-size: 16px;
+  padding-left: 10px;
+  color: black;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 14px;
+  line-height: 22px;
 }
 
 .botonera{
@@ -341,7 +362,7 @@ body {
 .total-mi-pedido{
   margin: 4px auto;
   font-size: 28px;
-  font-family: "Roboto-Bold", 'sans-serif';
+  font-family: 'Ubuntu', sans-serif;
   padding-right: 10px;
 
 }
